tests/rosetta/transpiler/Clojure/check-that-file-exists.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/check-that-file-exists.clj:21:119).
Unable to resolve symbol: main_p in this context

Full report at:
/tmp/clojure-870556455732275106.edn
